updated css body background color and header font color

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -14,20 +14,22 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
+  background-color: #914891;
 }
 
 .wrapper {
   padding-top: 30px;
   padding-left: 20px;
   padding-right: 20px;
+  
 }
+
 
 header {
   text-align: center;
   padding: 20px;
   padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  color: hsl(53, 79%, 52%);
 }
 
 .card {
